# catk

./: Cargo.toml  Dockerfile  Makefile  README.md  catk.cabal  compose.yaml
app/: Main.hs
crates/ca/: Cargo.toml
crates/ca/src/: cli.rs  error.rs  main.rs
crates/cals/: Cargo.toml
crates/catk/: Cargo.toml
crates/catk/src/: context.rs  file.rs  lib.rs  pp.rs  source.rs
crates/catk/src/kernel/: parser.rs
crates/catk/src/logiclang/: parser.rs
crates/catk/src/pp/: mod.rs  options.rs  parser.rs  syntax.rs
crates/catk/src/tracking/: file.rs  mod.rs  source.rs
src/: CATK.hs
