cabal-version:      3.0
name:               catk
version:            0.1.0.0
synopsis:           C Analysis Toolkit
homepage:           https://maxinedeandrade.github.io/projects/catk
license:            MIT
license-file:       LICENSE
author:             Maxine DeAndrade
maintainer:         deandrade@posteo.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  CATK
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable catk
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        catk
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        ImportQualifiedPost